# ai-chaperone

./: .gitignore  README.md
image-llm-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
image-llm-server/docker/: entrypoint.sh
image-llm-server/src/core/: aws_server.py  model_client.py
image-llm-server/src/core/prompts/: config.json
image-llm-server/src/core/prompts/system/: safety.md
image-llm-server/src/core/prompts/user/: safety.md
image-llm-server/src/core/utils/: model_utils.py  video_utils.py
image-llm-server/tests/: minimal_test.py
lambdas/ai-chaperone-entry-point/: README.md  lambda_function.py
lambdas/ai-chaperone-rules-based-transcript-moderation/: README.md  lambda_handler.py  transcript_moderation_optimized.py
lambdas/ai-chaperone-rules-based-transcript-moderation/pyahocorasick-2.2.0.dist-info/: RECORD
lambdas/ai-chaperone-stream-handler/: README.md  lambda_function.py
text-llm-server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
text-llm-server/docker/: dockerfile  entrypoint.sh  steps.txt
text-llm-server/src/core/: aws_server.py  model_client.py
text-llm-server/src/core/prompts/: config.json
text-llm-server/src/core/prompts/system/: safety.md  summary.md
text-llm-server/src/core/prompts/user/: safety.md  summary.md
text-llm-server/src/core/utils/: file_utils.py  model_utils.py
text-llm-server/tests/: minimal_test.py  stress_test.py
